# UERANSIM

./: CMakeLists.txt
config/: custom-gnb.yaml  open5gs-gnb.yaml  open5gs-gnb_1.yaml  open5gs-ue.yaml  open5gs-ue_i.yaml
src/: onppgnb.cpp  onppue.cpp
src/asn/asn1c/: CMakeLists.txt  oer_decoder.c  oer_decoder.h  oer_encoder.h  oer_support.c  oer_support.h
src/asn/ngap/: CMakeLists.txt
src/asn/rrc/: CMakeLists.txt
src/cmake_utils/: CMakeLists.txt  combine_archives.cmake  copy_headers.cmake
src/ext/: CMakeLists.txt
src/gnb/: CMakeLists.txt
src/gnb/gtp/: task.cpp  task.hpp
src/gnb/ngap/: handover.cpp  interface.cpp  task.hpp  transport.cpp
src/gnb/rls/: udp_task.cpp  udp_task.hpp
src/lib/: CMakeLists.txt
src/onppgnb/: CMakeLists.txt  onppgnb.cpp  onppgnb.hpp
src/onppue/: CMakeLists.txt  onppue.cpp  onppue.hpp
src/ue/: CMakeLists.txt  types.hpp
src/ue/nas/mm/: sap.cpp
src/ue/nas/sm/: establishment.cpp
src/ue/rrc/: connection.cpp  failures.cpp  task.cpp
src/utils/: CMakeLists.txt  nts.hpp
